--- a/style.css
+++ b/style.css
@@ -30,3 +30,10 @@
     object-fit: cover;
   }
 }
+
+@media (max-width: 380px) {
+  .footer-row {
+    display: flex;
+    flex-direction: column;
+  }
+}
